AUTO_FILES("." "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/libsundaowen" "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/ELFIO" "src" "\\.hpp$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/unicorn/include" "src" "\\.h$")
include_directories(${DEP_INCLUDE_DIR})
link_directories(${DEP_LIBRARY_DIR})
add_definitions(-DSDW_MAIN)
ADD_EXE(dumpInitMemory "${src}")
target_link_libraries(dumpInitMemory unicorn)
if(CYGWIN)
  target_link_libraries(dumpInitMemory iconv)
endif()
install(TARGETS dumpInitMemory DESTINATION bin)
